--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
-        "axios": "^1.5.0",
+        "axios": "^1.6.1",
         "babel-loader": "9.1.0",
         "babel-plugin-named-asset-import": "^0.3.8",
         "babel-preset-react-app": "10.0.1",
@@ -73,7 +73,7 @@
         "@wdio/spec-reporter": "^8.0.0",
         "babel-eslint": "^10.1.0",
         "babel-jest": "29.3.1",
-        "chromedriver": "^108.0.0",
+        "chromedriver": "^119.0.1",
         "eslint": "^7.11.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-react-app": "^6.0.0",
@@ -105,7 +105,8 @@
     "resolutions": {
         "semver": "7.5.3",
         "postcss": "8.4.31",
-        "@babel/traverse": "7.23.2"
+        "@babel/traverse": "7.23.2",
+        "axios": "^1.6.1"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
