--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "jest-resolve": "27.4.5",
     "jest-watch-typeahead": "1.0.0",
     "k6": "^0.0.0",
+    "url": "^0.11.3",
     "prettier": "^2.8.0",
     "prop-types": "^15.8.1",
     "react-dev-utils": "12.0.1",
