--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adobe/css-tools": "^4.3.2",
     "@babel/core": "7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
@@ -11,12 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "axios": "^1.7.4",
+    "axios": "^1.12.0",
     "babel-loader": "9.1.0",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "10.0.1",
     "bfj": "^7.0.2",
-    "bootstrap-italia": "^2.8.7",
+    "bootstrap-italia": "^2.3.8",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "css-loader": "5.2.7",
@@ -55,9 +56,6 @@
     "sass-loader": "^10.0.5",
     "semver": "^7.5.2",
     "style-loader": "2.0.0",
-    "stylelint": "15.10.1",
-    "stylelint-config-sass-guidelines": "9.0.0",
-    "stylelint-config-standard": "24.0.0",
     "terser-webpack-plugin": "5.3.6",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
@@ -67,12 +65,12 @@
   "devDependencies": {
     "@babel/preset-flow": "7.18.6",
     "@babel/register": "^7.18.9",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.9",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.17",
     "@svgr/webpack": "6.5.1",
     "@types/k6": "^0.41.0",
-    "@wdio/cli": "^8.22.1",
-    "@wdio/jasmine-framework": "^8.36.1",
-    "@wdio/local-runner": "^8.22.1",
+    "@wdio/cli": "^9.20.0",
+    "@wdio/jasmine-framework": "^9.20.0",
+    "@wdio/local-runner": "^9.20.0",
     "@wdio/spec-reporter": "^8.21.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "29.3.1",
@@ -93,29 +91,36 @@
     "jest-circus": "27.4.5",
     "jest-resolve": "27.4.5",
     "jest-watch-typeahead": "1.0.0",
-    "k6": "^0.0.0",
     "prettier": "^2.8.0",
     "prop-types": "^15.8.1",
     "react-dev-utils": "12.0.1",
+    "stylelint": "14.0.0",
+    "stylelint-config-sass-guidelines": "9.0.0",
+    "stylelint-config-standard": "24.0.0",
     "swagger-ui-react": "^4.15.5",
     "url": "^0.11.3",
     "wdio-chromedriver-service": "^8.1.1",
-    "webdriverio": "^8.22.1",
+    "webdriverio": "^9.20.0",
     "webpack": "^5.94.0",
-    "webpack-dev-server": "4.11.1",
+    "webpack-dev-server": "^4.15.2",
     "webpack-manifest-plugin": "5.0.0",
     "workbox-webpack-plugin": "6.5.4"
+  },
+  "overrides": {
+    "dompurify": "^3.3.0",
+    "prismjs": "^1.30.0",
+    "tmp": "^0.2.2"
   },
   "resolutions": {
     "semver": "7.5.3",
     "postcss": "8.4.31",
-    "@babel/traverse": "7.23.2",
-    "axios": "^1.7.4",
-    "micromatch": "^4.0.8",
-    "@adobe/css-tools": "^4.3.2"
+    "@babel/traverse": "7.27.1",
+    "axios": "1.7.4",
+    "micromatch": "4.0.8",
+    "@adobe/css-tools": "4.3.2"
   },
   "scripts": {
-    "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
+    "start": "bash -c './env.sh' && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
     "start-mock-server": "node mock-server/src/index.js",
     "build": "set INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
     "test": "node scripts/test.js",
@@ -123,14 +128,14 @@
     "test:e2e": "wdio run ./test/config/wdio.conf.js",
     "lint": "yarn eslint ./src",
     "prepare": "husky install",
-    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'",
-    "lint:check": "eslint './src/**/*.{ts,tsx,js,jsx}'",
-    "prettier:fix": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
-    "prettier:check": "prettier --check './src/**/*.{ts,tsx,js,jsx}'",
+    "lint:fix": "eslint --fix ./src/**/*.{ts,tsx,js,jsx}",
+    "lint:check": "eslint ./src/**/*.{ts,tsx,js,jsx}",
+    "prettier:fix": "prettier --write ./src/**/*.{ts,tsx,js,jsx}",
+    "prettier:check": "prettier --check ./src/**/*.{ts,tsx,js,jsx}",
     "postinstall": "sh talisman/talisman-precommit.sh",
     "stylelint:check": "stylelint './src/**/*.{scss,css}'",
     "stylelint:fix": "stylelint --fix './src/**/*.{scss,css}'",
-    "wdio": "wdio run wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "eslintConfig": {
     "extends": [
@@ -213,5 +218,8 @@
       ]
     ]
   },
-  "proxy": "http://localhost:5001"
+  "proxy": "http://localhost:5001",
+  "prettier": {
+    "trailingComma": "none"
+  }
 }
